contact page icons fixes on iphone se

--- a/css/info_cards.css
+++ b/css/info_cards.css
@@ -249,7 +249,18 @@
       font-size: 1rem;
     }
   }
-
   
+/* Iphone se media qs */
 
-  
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (min-device-pixel-ratio: 2)
+{  
+.tech {
+  font-size: 0.8rem;
+}
+.card_content p {
+  font-size: 0.6rem;
+}
+}
