--- a/css/pages_style/contact.css
+++ b/css/pages_style/contact.css
@@ -41,15 +41,15 @@
 
 #contact > main {
     margin: 120px auto 0;
+    width: 90%;
+    height: 100vh;   
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 90%;
     /* background-color: #000000; */
-    background-color: transparent;
     color: white;
+    background-color: transparent;    
 }
 
 .contact_page_icons {
@@ -64,10 +64,11 @@
 
 .contact_page_icons .social {
   padding: 1rem;
+  width: 100%;
+  height: fit-content;
   position: relative;
   display: flex;
-  background-color: var(--color-bg);
-  height: fit-content;
+  background-color: var(--color-bg); 
   transition: all .3s ease-in-out 0s;
   filter: drop-shadow(1´0px 1px 2px rgba(39, 39, 39, 0.425)); 
   z-index: 99;
@@ -84,7 +85,6 @@
   padding: 0.25rem;
   transition: all .3s ease-in-out;  
 }
-
 
 .contact_page_icons .social .soc-item:hover {
   color: white;
@@ -149,3 +149,35 @@
   form > input[type="submit"]:hover {
     background-color: #555;
   }
+
+  
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (min-device-pixel-ratio: 2)
+{
+    
+#contact h1 {
+  position: absolute;
+  top: 25vh;
+  color: white;
+  font-size: 2rem;
+  text-shadow: 1px 1px black;
+}
+
+.contact_page_icons {
+  width: 80%;
+  position: absolute;
+  top: 45vh;
+  z-index: 50;
+  display: grid;
+  place-content: center;
+ overflow: unset; 
+}
+
+.contact_page_icons .social .soc-icon {
+   font-size: 1.5rem;
+  
+}
+
+}
